<resources>
    <string name="app_name">Cync</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_cync_tank">News Feed</string>
    <string name="nav_item_home">Map</string>
    <string name="nav_item_my_profile">My Profile</string>
    <string name="nav_item_my_post">My Garage</string>
    <string name="nav_item_friends_list">Friends List</string>
    <string name="nav_item_block_list">Blocked Users</string>
    <string name="nav_item_my_group">My Groups</string>
    <string name="nav_item_notifications">Notifications</string>
    <string name="nav_item_mechanics">Rider Assist</string>
    <string name="nav_item_change_password">Change Password</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Logout</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_mechanics</item>
        <item>@string/nav_item_cync_tank</item>
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_my_profile</item>
        <item>@string/nav_item_my_post</item>
        <item>@string/nav_item_friends_list</item>
        <item>@string/nav_item_block_list</item>
        <item>@string/nav_item_my_group</item>
        <item>@string/nav_item_notifications</item>
        <item>@string/nav_item_change_password</item>
        <item>@string/nav_item_settings</item>
    </string-array>
    <string-array name="nav_drawer_image">
        <item>@drawable/assist</item>
        <item>@drawable/cync_tank</item>
        <item>@drawable/ic_map</item>
        <item>@drawable/my_profile</item>
        <item>@drawable/my_posts</item>
        <item>@drawable/my_groups</item>
        <item>@drawable/my_groups</item>
        <item>@drawable/my_groups</item>
        <item>@drawable/notifications</item>
        <item>@drawable/password</item>
        <item>@drawable/setting</item>
    </string-array>
    <string-array name="nav_drawer_image_active">
        <item>@drawable/assist_active</item>
        <item>@drawable/cync_tank_fill</item>
        <item>@drawable/ic_map_active</item>
        <item>@drawable/my_profile_active</item>
        <item>@drawable/my_posts_fill</item>
        <item>@drawable/my_groups_active</item>
        <item>@drawable/my_groups_active</item>
        <item>@drawable/my_groups_active</item>
        <item>@drawable/notifications_active</item>
        <item>@drawable/password_active</item>
        <item>@drawable/setting_active</item>
    </string-array>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <!-- -->
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="Email">Email Address</string>
    <string name="conform_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="txt_register">DON\'T HAVE AN ACCOUNT? <b> REGISTER HERE</b></string>
    <string name="txt_forgot">ENTER YOUR EMAIL BELOW TO RETRIEVE \n YOUR ACCOUNT </string>
    <string name="txt_delete">Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="other_user">OTHER USERS</string>
    <!--<string name="fb_app_id">1646515782230971</string>--> <!--1449829348651620-->
    <string name="fb_app_id">1660773027523529</string>
    <string name="fb_login_protocol_scheme">fb1660773027523529</string>

    <string name="s_wrong">Something went wrong. Please try again.</string>
    <!--====menu settings====-->
    <string name="action_settings">Delete friend</string>
    <string name="action_add_new">Add</string>
    <string name="action_edit">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="lbl_delete"> Selected</string>
    <string name="action_check">CheckBoxes</string>

    <!--Google Map Key kp AIzaSyBd8qnd2KCdBAF20StI4oz4-kualRBoPXo -->
    <!--Google Map Key release AIzaSyAok-P_ajoPGXIADT_K9awcygZIWWnIGx4 -->

    <!--Release key-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBd8qnd2KCdBAF20StI4oz4-kualRBoPXo</string>

    <!--Debug key-->
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAOQCYYT6mdcG8liF3sNsM4MDqo9ylQmiQ</string>-->

    <!--Toast Messages-->
    <string name="check_internet">Please Check Your Internet Connection.</string>
    <string name="send_button_label">SEND</string>
    <string name="try_at_mentions">Try @ mentions</string>
    <string name="no_matches_found">No matches found</string>
    <string name="no_mentions_added">Type some text with mentions below.</string>
    <!--<string name="google_app_id">cync-1377</string>-->
    <string name="application_name">ExoPlayer</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="retry">Retry</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="unexpected_intent_action">Unexpected intent action:  </string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder </string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder </string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"http://cync.com.au\",\n  }\n}]</string>
    <string name="location_not_found">Location not found, please try again.</string>

</resources>