<com.rey.material.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:padding="0dp">
    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark_black">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="REGISTRATION"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:layout_below="@+id/rlTitle"
        android:padding="0dp"
        android:scrollbars="none"
        app:behavior_overlapTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:paddingEnd="0dp"
        app:paddingStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark_black">


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageViewProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="120dp"
                    android:src="@drawable/add"
                    android:scaleType="centerInside"
                    android:background="@drawable/img_placeholder" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <com.rey.material.widget.LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlTitle"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="30dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="10dp">

                    <com.customwidget.materialEditText
                        android:id="@+id/rg_first_name"
                        style="@style/avtMaterialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user_icon"
                        android:elevation="4dp"
                        android:hint="@string/first_name"
                        android:inputType="text" />

                    <com.customwidget.materialEditText
                        android:id="@+id/rg_last_name"
                        style="@style/avtMaterialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user_icon"
                        android:elevation="4dp"
                        android:hint="@string/last_name"
                        android:inputType="text" />

                    <com.customwidget.materialEditText
                        android:id="@+id/rg_email"
                        style="@style/avtMaterialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/mail_icon"
                        android:elevation="4dp"
                        android:hint="@string/Email"
                        android:inputType="textEmailAddress" />

                    <com.customwidget.materialEditText
                        android:id="@+id/rg_password"
                        style="@style/avtMaterialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/password_icon"
                        android:hint="@string/password"
                        android:elevation="4dp"
                        android:fontFamily="sans-serif"
                        android:inputType="textPassword"
                        />

                    <com.customwidget.materialEditText
                        android:id="@+id/rg_conform_password"
                        style="@style/avtMaterialEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="sans-serif"
                        android:drawableLeft="@drawable/password_icon"
                        android:hint="@string/conform_password"
                        android:elevation="4dp"
                        />
                    <include
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        layout="@layout/terms_condition"/>

                    <com.rey.material.widget.Button
                        android:id="@+id/register_btn"
                        style="@style/itemMaterialRippalWaveStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="10dp"
                        android:elevation="4dp"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:background="@color/colorPrimaryDark_black"
                        android:text="SUBMIT"
                        android:textColor="#FFFFFF" />
                </com.rey.material.widget.LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</com.rey.material.widget.RelativeLayout>